<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/white"
    android:minHeight="300dp">


  <TextView
      android:id="@+id/titleTextView"
      android:layout_width="match_parent"
      android:layout_height="0dp"
      android:layout_marginTop="16dp"
      android:fontFamily="@font/roboto_black"
      android:gravity="center"
      android:text="@string/landed"
      android:textAllCaps="true"
      android:textColor="@color/black"
      android:textSize="40sp"
      app:layout_constraintTop_toTopOf="parent" />

  <Button
      android:id="@+id/cancelButton"
      android:layout_width="150dp"
      android:layout_height="100dp"
      android:layout_marginStart="32dp"
      android:layout_marginBottom="40dp"
      android:fontFamily="@font/roboto_bold"
      android:text="@string/cancel"
      android:textSize="24sp"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintStart_toStartOf="parent" />

  <Button
      android:id="@+id/saveButton"
      android:layout_width="150dp"
      android:layout_height="100dp"
      android:layout_marginEnd="32dp"
      android:layout_marginBottom="40dp"
      android:fontFamily="@font/roboto_bold"
      android:text="@string/save"
      android:textSize="24sp"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
