<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:keepScreenOn="true">


  <FrameLayout
      android:id="@+id/mapboxLayout"
      android:layout_width="match_parent"
      android:layout_height="match_parent" />

  <com.apro.paraflight.ui.customview.MeterView
      android:id="@+id/speedMeterView"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:mv_title="@string/gs"
      app:mv_unit="@string/km_h" />

  <com.apro.paraflight.ui.customview.MeterView
      android:id="@+id/fuelMeterView"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      app:layout_constraintStart_toEndOf="@+id/speedMeterView"
      app:layout_constraintTop_toTopOf="parent"

      />

  <com.apro.paraflight.ui.customview.MeterView
      android:id="@+id/altitudeMeterView"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:mv_title="@string/asl"
      app:mv_unit="@string/m" />

  <com.google.android.material.textview.MaterialTextView
      android:id="@+id/lon_text_view"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="16dp"
      android:layout_marginTop="140dp"
      android:background="@android:color/white"
      android:elevation="2dp"
      android:padding="4dp"
      android:textColor="@color/black"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent" />

  <com.google.android.material.textview.MaterialTextView
      android:id="@+id/latTextView"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="16dp"
      android:layout_marginTop="4dp"
      android:background="@android:color/white"
      android:elevation="2dp"
      android:padding="4dp"
      android:textColor="@color/black"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/lon_text_view" />

  <com.google.android.material.textview.MaterialTextView
      android:id="@+id/accTextView"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="16dp"
      android:layout_marginTop="4dp"
      android:background="@android:color/white"
      android:elevation="2dp"
      android:padding="4dp"
      android:textColor="@color/black"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/latTextView" />


</androidx.constraintlayout.widget.ConstraintLayout>
