<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:background="@android:color/white">

  <TextView
      android:id="@+id/titleTextView"
      style="@style/TextAppearance.Settings.Title"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:fontFamily="@font/roboto_medium"
      android:padding="8dp"
      android:text="@string/take_off_detection"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent" />

  <androidx.constraintlayout.widget.ConstraintLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginStart="@dimen/activity_horizontal_margin"
      android:layout_marginEnd="@dimen/activity_horizontal_margin"
      android:background="@drawable/bg_construction_module"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/titleTextView">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:text="@string/speed"
        android:textAllCaps="true"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@id/takeOffSpeedPicker"
        app:layout_constraintEnd_toEndOf="@id/takeOffSpeedPicker"
        app:layout_constraintStart_toStartOf="@id/takeOffSpeedPicker" />

    <NumberPicker
        android:id="@+id/takeOffSpeedPicker"
        style="@style/Paraflight.NumberPicker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/takeOffAltDiffPicker"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:text="@string/alt_diff"
        android:textAllCaps="true"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@id/takeOffAltDiffPicker"
        app:layout_constraintEnd_toEndOf="@id/takeOffAltDiffPicker"
        app:layout_constraintStart_toStartOf="@id/takeOffAltDiffPicker" />

    <NumberPicker
        android:id="@+id/takeOffAltDiffPicker"
        style="@style/Paraflight.NumberPicker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/minFlightSpeedPicker"
        app:layout_constraintStart_toEndOf="@id/takeOffSpeedPicker"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:text="@string/min_speed"
        android:textAllCaps="true"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@id/minFlightSpeedPicker"
        app:layout_constraintEnd_toEndOf="@id/minFlightSpeedPicker"
        app:layout_constraintStart_toStartOf="@id/minFlightSpeedPicker" />

    <NumberPicker
        android:id="@+id/minFlightSpeedPicker"
        style="@style/Paraflight.NumberPicker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/takeOffAltDiffPicker"
        app:layout_constraintTop_toTopOf="parent" />


  </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>